--- a/about.html
+++ b/about.html
@@ -20,11 +20,11 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="index.html">Home</a>
           <!-- <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a> -->
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="about.html">About</a>
           <!-- <a class="nav-link" href="about.html">About</a> -->
         </li>
@@ -61,40 +61,23 @@
   <div class="bottom-div text-white d-flex flex-wrap w-100">
     <div class="col-sm-3 desktop-buffer"></div>
     <div class="col-lg-6 col-12 flex-grow">
-      <h3>Welcome to the Practitioner's Essentials<br></h3>
+      <h3>About this Website<br></h3>
       <p2>
-        When I was getting started with the practice, the worst part was all the books. Books are only available to a
-        select few and can't be sustainably updated or distributed. It's all an inherently exclusive form of media. I
-        swore that, when I someday had information to share I would do it in a way that leveraged the inherent benefits
-        of the internet.
-      </p2>
-      <p2>
-        Whoops
-      </p2>
-      <p2><i>
-          Lesson One for the young (or early) practitioner: Don't make oaths
-        </i>
+        Hi! I'm an amature programmer (and extremely amature web developer). I love the visual of the magic diagarams in
+        Pact/Pale and wanted to make a visual representation of the picture inside my head. The circle took less than a
+        week, and all the rest of this website crap took about 2 more months.
       </p2>
       <p2>
-        Not until you're older and wiser. How will you know if you're old and wise enough to make an oath? If you're
-        reading this page, don't worry about it. You won't be wise enough for a while.
-      </p2>
-
-      <p2>
-        The first few pages of this site are dedicated to the Awakening ritual. The ritual where you open yourself up to
-        the world of the practice, and become bound by it's laws. Awakening is a complex ritual that cannot be rushed.
-        Please take the time to read and absorb all of the meaning and symbolism before you take the plunge. Awakening
-        is a statement to the Spirits about who you are. Make absolutely certain you're saying what you want to say.
+        Its awful, unmaintainable css garbage and
+        I made a lot of performance/compatibility mistakes along the way. If you're using Internet Explorer or edge or a
+        mobile device
+        or a slow computer or a low resolution display then this probably isn't even loading for you. I've learned so
+        many lessons from making this (mostly what not to do) and if I ever work on it again I'll be doing a complete
+        overhaul. If you find a mistake, feel free to let me know but in all honesty I'll probably do nothing about it.
       </p2>
       <p2>
-        But please don't let me dampen your hope for a future of magic and mystery. I was young once too and I know the
-        eagerness and impatience that comes with youth. Young people make mistakes and rush into things. The world of
-        the Practice is beautiful and terrible and it would break my heart to see a life cut short by the terror before
-        it could see the beauty.
-
-      </p2>
-      <p2 style="text-align:right;">
-        - K
+        That being said, I really hope you like it! It was really fun to make and I hope it's as pretty to you as it is
+        to me.
       </p2>
       <br>
       <br>
