updating README, for github

--- a/about.html
+++ b/about.html
@@ -65,13 +65,13 @@
       <p2>
         Hi! I'm an amature programmer (and extremely amature web developer). I love the visual of the magic diagarams in
         Pact/Pale and wanted to make a visual representation of the picture inside my head. The circle took less than a
-        week, and all the rest of this website crap took about 2 more months.
+        week, and all the rest of this website stuff took about 2 more months.
       </p2>
       <p2>
-        Its awful, unmaintainable css garbage and
+        Its got a lot of problems, especially with the surrounding css, and
         I made a lot of performance/compatibility mistakes along the way. If you're using Internet Explorer or edge or a
         mobile device
-        or a slow computer or a low resolution display then this probably isn't even loading for you. I've learned so
+        or a slow computer or a low resolution display then this probably wont work. I've learned so
         many lessons from making this (mostly what not to do) and if I ever work on it again I'll be doing a complete
         overhaul. If you find a mistake, feel free to let me know but in all honesty I'll probably do nothing about it.
       </p2>
@@ -93,8 +93,8 @@
   <div class="text-muted d-flex">
     <div class="footer">
       Hey there! I feel like there should be a footer here but I don't know what to put. All of the intellectual
-      property belongs to J.C.McCrae, I just like the pretty diagrams. If I clean up my Github someday I'll link it
-      here.
+      property belongs to J.C.McCrae, I just like the pretty diagrams. Check out my github at <u><a
+          href="https://github.com/SamLojpur" class="text-muted">https://github.com/SamLojpur</a></u>
     </div>
   </div>
 
