--- a/awakening.html
+++ b/awakening.html
@@ -79,17 +79,20 @@
             style="text-indent: 1em;">Hungry Choir</a>
 
           <a class="list-group-item bg-transparent">
-            <hr class="chapter-divider" /></a>
+            <hr class="chapter-divider" />
+          </a>
 
           <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link disabled"
             id="ritual jacobs-bell">Jacob's Bell, ON</a>
           <a class="list-group-item bg-transparent">
-            <hr class="chapter-divider" /></a>
+            <hr class="chapter-divider" />
+          </a>
 
           <a href="#" class="list-group-item list-group-item-action bg-transparent nav-link disabled"
             id="ritual montreal">Montreal, QC</a>
           <a class="list-group-item bg-transparent">
-            <hr class="chapter-divider" /></a>
+            <hr class="chapter-divider" />
+          </a>
         </div>
       </div>
     </div>
@@ -161,8 +164,8 @@
   <div class="text-muted d-flex">
     <div class="footer">
       Hey there! I feel like there should be a footer here but I don't know what to put. All of the intellectual
-      property belongs to J.C.McCrae, I just like the pretty diagrams. If I clean up my Github someday I'll link it
-      here.
+      property belongs to J.C.McCrae, I just like the pretty diagrams. Check out my github at <u><a
+          href="https://github.com/SamLojpur" class="text-muted">https://github.com/SamLojpur</a></u>
     </div>
   </div>
 
