--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
     <div class="col-sm-3 desktop-buffer"></div>
   </div>
 
-
   </div>
 
   </div>
@@ -110,8 +109,8 @@
   <div class="text-muted d-flex">
     <div class="footer">
       Hey there! I feel like there should be a footer here but I don't know what to put. All of the intellectual
-      property belongs to J.C.McCrae, I just like the pretty diagrams. If I clean up my Github someday I'll link it
-      here.
+      property belongs to J.C.McCrae, I just like the pretty diagrams. Check out my github at <u><a
+          href="https://github.com/SamLojpur" class="text-muted">https://github.com/SamLojpur</a></u>
     </div>
   </div>
 
